# Virtual-Hall-Pass

./: Pass.py  Permissions.py  README.md  Todo.py  Token.py  User.py  UserFeedback.py  backup.py  feedback.txt  main.py  plan.md  pyproject.toml  store.txt
backups/Token/: 4Token.py  5Token.py  6Token.py
backups/main/: 4main.py  5main.py  6main.py
static/: style.css  warn.js
templates/: ReportIssue.html  about.html  backend.html  classes.html  dashboard.html  index.html  issueSubmited.html  layout.html  login.html  loginAbout.html  loginReportIssue.html  passInProgress.html  profile.html
templates/admin/: RunCommand.html  admin.html  createuser.html  index.html
