[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
Flask = "^2.1.3"
cryptography = "^39.0.0"
bcrypt = "^4.0.1"
zsvision = "^0.7.12"
Flask-Admin = "^1.6.0"
xds-protos = "^0.0.11"
SQLAlchemy = "^1.4.46"
flask-sqlalchemy = "^3.0.2"
SQLAlchemy-Utils = "^0.39.0"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
debugpy = "^1.6.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"